# boilerplate-template

./: README.md
traefik-fastapi-jwt/: docker-compose.yml  traefik.yml
traefik-fastapi-jwt/api-1/: Dockerfile  main.py  pyproject.toml
traefik-fastapi-jwt/api-2/: Dockerfile  main.py
traefik-fastapi-jwt/opa/: Dockerfile
traefik-fastapi-jwt/opa/policies/: policy.rego
traefik-fastapi-jwt/traefik-middlewares/: Dockerfile  main.py  pyproject.toml
