[tool.poetry]
name = "traefik-fastapi-jwt"
version = "0.1.0"
description = ""
authors = ["aidenpearce001 <aidenpearcewd01@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.18"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
